simple ws & interceptor logic